--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,18 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Automation Demo</th></tr>
-<tr><td><a href="#t0">The Internet</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">178,281</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">72,417</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Automation Demo</th></tr></tbody><tbody id="t0"><tr><th colspan="4">The Internet &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">elementSuite.AddRemove</td><td><a href="#m0">exclusion</a></td><td rowspan="1">1615604178377</td><td rowspan="1">57326</td></tr><tr class="passedeven"><td><a href="#m1">inclusion</a></td><td rowspan="1">1615604235704</td><td rowspan="1">15449</td></tr><tr class="passedodd"><td rowspan="2">elementSuite.ContextMenu</td><td><a href="#m2">alert</a></td><td rowspan="1">1615604178377</td><td rowspan="1">53453</td></tr><tr class="passedodd"><td><a href="#m3">contextClick</a></td><td rowspan="1">1615604231834</td><td rowspan="1">16147</td></tr><tr class="passedeven"><td rowspan="4">elementSuite.DynamicContent</td><td><a href="#m4">addCheckBox</a></td><td rowspan="1">1615604178377</td><td rowspan="1">61744</td></tr><tr class="passedeven"><td><a href="#m5">disableInputField</a></td><td rowspan="1">1615604240123</td><td rowspan="1">52709</td></tr><tr class="passedeven"><td><a href="#m6">enableInputField</a></td><td rowspan="1">1615604292834</td><td rowspan="1">15964</td></tr><tr class="passedeven"><td><a href="#m7">removeCheckBox</a></td><td rowspan="1">1615604308800</td><td rowspan="1">47812</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">elementSuite.Login</td><td><a href="#m0">loginFullCreds</a></td><td rowspan="1">1615894455407</td><td rowspan="1">45492</td></tr><tr class="passedeven"><td><a href="#m1">loginWrongPassword</a></td><td rowspan="1">1615894500903</td><td rowspan="1">13757</td></tr><tr class="passedeven"><td><a href="#m2">loginWrongUserName</a></td><td rowspan="1">1615894514666</td><td rowspan="1">13100</td></tr></tbody>
 </table>
-<h2>The Internet</h2><h3 id="m0">elementSuite.AddRemove#exclusion</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">elementSuite.AddRemove#inclusion</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">elementSuite.ContextMenu#alert</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">elementSuite.ContextMenu#contextClick</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">elementSuite.DynamicContent#addCheckBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">elementSuite.DynamicContent#disableInputField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">elementSuite.DynamicContent#enableInputField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">elementSuite.DynamicContent#removeCheckBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">elementSuite.Login#loginFullCreds</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">elementSuite.Login#loginWrongPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">elementSuite.Login#loginWrongUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
