--- a/test-output/old/Automation Demo/classes.html
+++ b/test-output/old/Automation Demo/classes.html
@@ -30,6 +30,36 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>elementSuite.Login</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginFullCreds</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginWrongPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginWrongUserName</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>elementSuite.DynamicContent</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -37,11 +67,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>removeCheckBox</td>
+<td>enableInputField</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>enableInputField</td>
+<td>removeCheckBox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
