--- a/test-output/old/Automation Demo/methods.html
+++ b/test-output/old/Automation Demo/methods.html
@@ -1,20 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Demo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85a98f">  <td>21/03/13 05:56:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemove.exclusion()[pri:0, instance:elementSuite.AddRemove@7a765367]">exclusion</td> 
-  <td>TestNG-test=The Internet-1@1542706884</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/13 05:58:12</td>   <td>114458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.enableInputField()[pri:0, instance:elementSuite.DynamicContent@2a742aa2]">enableInputField</td> 
-  <td>TestNG-test=The Internet-2@16674830</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/13 05:58:28</td>   <td>130424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.removeCheckBox()[pri:0, instance:elementSuite.DynamicContent@2a742aa2]">removeCheckBox</td> 
-  <td>TestNG-test=The Internet-2@16674830</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/13 05:56:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenu.alert()[pri:0, instance:elementSuite.ContextMenu@3dfc5fb8]">alert</td> 
-  <td>TestNG-test=The Internet-3@943757666</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/13 05:57:20</td>   <td>61746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.disableInputField()[pri:0, instance:elementSuite.DynamicContent@2a742aa2]">disableInputField</td> 
-  <td>TestNG-test=The Internet-2@16674830</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/13 05:57:15</td>   <td>57328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemove.inclusion()[pri:0, instance:elementSuite.AddRemove@7a765367]">inclusion</td> 
-  <td>TestNG-test=The Internet-1@1542706884</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/13 05:56:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.addCheckBox()[pri:0, instance:elementSuite.DynamicContent@2a742aa2]">addCheckBox</td> 
-  <td>TestNG-test=The Internet-2@16674830</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/13 05:57:11</td>   <td>53458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenu.contextClick()[pri:0, instance:elementSuite.ContextMenu@3dfc5fb8]">contextClick</td> 
-  <td>TestNG-test=The Internet-3@943757666</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.addCheckBox()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">addCheckBox</td> 
+  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemove.exclusion()[pri:0, instance:elementSuite.AddRemove@76b0bfab]">exclusion</td> 
+  <td>TestNG-test=The Internet-1@1600253201</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/16 14:49:43</td>   <td>85657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginWrongUserName()[pri:0, instance:elementSuite.Login@4d50efb8]">loginWrongUserName</td> 
+  <td>TestNG-test=The Internet-4@572598786</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/16 14:50:33</td>   <td>135716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.removeCheckBox()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">removeCheckBox</td> 
+  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/16 14:49:17</td>   <td>60581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemove.inclusion()[pri:0, instance:elementSuite.AddRemove@76b0bfab]">inclusion</td> 
+  <td>TestNG-test=The Internet-1@1600253201</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/16 14:49:13</td>   <td>55659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenu.contextClick()[pri:0, instance:elementSuite.ContextMenu@467aecef]">contextClick</td> 
+  <td>TestNG-test=The Internet-3@1396939310</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenu.alert()[pri:0, instance:elementSuite.ContextMenu@467aecef]">alert</td> 
+  <td>TestNG-test=The Internet-3@1396939310</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/16 14:49:17</td>   <td>59657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginWrongPassword()[pri:0, instance:elementSuite.Login@4d50efb8]">loginWrongPassword</td> 
+  <td>TestNG-test=The Internet-4@572598786</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/16 14:49:21</td>   <td>63682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.disableInputField()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">disableInputField</td> 
+  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/16 14:50:17</td>   <td>119598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.enableInputField()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">enableInputField</td> 
+  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginFullCreds()[pri:0, instance:elementSuite.Login@4d50efb8]">loginFullCreds</td> 
+  <td>TestNG-test=The Internet-4@572598786</td>   <td></td> </tr>
 </table>
