--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ea97a2">  <td>21/03/16 14:34:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginFullCreds()[pri:0, instance:elementSuite.Login@34cd072c]">loginFullCreds</td> 
-  <td>main@156545103</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/03/16 14:35:00</td>   <td>45496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginWrongPassword()[pri:0, instance:elementSuite.Login@34cd072c]">loginWrongPassword</td> 
-  <td>main@156545103</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/03/16 14:35:14</td>   <td>59259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginWrongUserName()[pri:0, instance:elementSuite.Login@34cd072c]">loginWrongUserName</td> 
-  <td>main@156545103</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>21/03/17 13:41:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.alert()[pri:0, instance:elementSuite.ContextMenuTest@63440df3]">alert</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>21/03/17 13:42:40</td>   <td>61312</td> <td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@63440df3]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>21/03/17 13:42:25</td>   <td>46325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.contextClick()[pri:0, instance:elementSuite.ContextMenuTest@63440df3]">contextClick</td> 
+  <td>main@194706439</td>   <td></td> </tr>
 </table>
