--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\eonyango\AppData\Local\Temp\testng-eclipse--1231721249\testng-customsuite.xml</span>
+                    <span>C:\Users\eonyango\AppData\Local\Temp\testng-eclipse-163976645\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\eonyango\AppData\Local\Temp\testng-eclipse--1231721249\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\eonyango\AppData\Local\Temp\testng-eclipse-163976645\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,16 +202,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'alert')
 data.setCell(0, 2, 'elementSuite.ContextMenuTest')
-data.setCell(0, 3, 46322);
+data.setCell(0, 3, 14480);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'contextClick')
 data.setCell(1, 2, 'elementSuite.ContextMenuTest')
-data.setCell(1, 3, 14983);
+data.setCell(1, 3, 5230);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,11 +244,11 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">contextClick</span>
-                <span class="method-start">46325 ms</span>
+                <span class="method-start">14485 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">browserClose</span>
-                <span class="method-start">61312 ms</span>
+                <span class="method-start">19719 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
