--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\eonyango\AppData\Local\Temp\testng-eclipse-163976645\testng-customsuite.xml</span>
+                    <span>C:\Users\eonyango\AppData\Local\Temp\testng-eclipse-1918067743\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\eonyango\AppData\Local\Temp\testng-eclipse-163976645\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\eonyango\AppData\Local\Temp\testng-eclipse-1918067743\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,18 +200,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'alert')
+data.setCell(0, 1, 'contextClick')
 data.setCell(0, 2, 'elementSuite.ContextMenuTest')
-data.setCell(0, 3, 14480);
+data.setCell(0, 3, 771);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'contextClick')
+data.setCell(1, 1, 'alert')
 data.setCell(1, 2, 'elementSuite.ContextMenuTest')
-data.setCell(1, 3, 5230);
+data.setCell(1, 3, 638);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -238,18 +238,30 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">elementSuite.ContextMenuTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">alert</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">10773 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">browserClose</span>
+                <span class="method-start">11414 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">13823 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">contextClick</span>
-                <span class="method-start">14485 ms</span>
+                <span class="method-start">19716 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
+              <div class="configuration-method after">
                 <span class="method-name">browserClose</span>
-                <span class="method-start">19719 ms</span>
-              </div> <!-- configuration-test after -->
+                <span class="method-start">20489 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
