--- a/test-output/old/Automation Demo/methods-alphabetical.html
+++ b/test-output/old/Automation Demo/methods-alphabetical.html
@@ -1,26 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Demo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="999395">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.addCheckBox()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">addCheckBox</td> 
-  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenu.alert()[pri:0, instance:elementSuite.ContextMenu@467aecef]">alert</td> 
-  <td>TestNG-test=The Internet-3@1396939310</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/16 14:49:13</td>   <td>55659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenu.contextClick()[pri:0, instance:elementSuite.ContextMenu@467aecef]">contextClick</td> 
-  <td>TestNG-test=The Internet-3@1396939310</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/16 14:49:21</td>   <td>63682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.disableInputField()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">disableInputField</td> 
-  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/16 14:50:17</td>   <td>119598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.enableInputField()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">enableInputField</td> 
-  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemove.exclusion()[pri:0, instance:elementSuite.AddRemove@76b0bfab]">exclusion</td> 
-  <td>TestNG-test=The Internet-1@1600253201</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/16 14:49:17</td>   <td>60581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemove.inclusion()[pri:0, instance:elementSuite.AddRemove@76b0bfab]">inclusion</td> 
-  <td>TestNG-test=The Internet-1@1600253201</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/16 14:48:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginFullCreds()[pri:0, instance:elementSuite.Login@4d50efb8]">loginFullCreds</td> 
-  <td>TestNG-test=The Internet-4@572598786</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/16 14:49:17</td>   <td>59657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginWrongPassword()[pri:0, instance:elementSuite.Login@4d50efb8]">loginWrongPassword</td> 
-  <td>TestNG-test=The Internet-4@572598786</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/16 14:49:43</td>   <td>85657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.loginWrongUserName()[pri:0, instance:elementSuite.Login@4d50efb8]">loginWrongUserName</td> 
-  <td>TestNG-test=The Internet-4@572598786</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/16 14:50:33</td>   <td>135716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContent.removeCheckBox()[pri:0, instance:elementSuite.DynamicContent@3cb1ffe6]">removeCheckBox</td> 
-  <td>TestNG-test=The Internet-2@696118995</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.addCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">addCheckBox</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/22 15:58:51</td>   <td>51390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.alert()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">alert</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/22 15:59:24</td>   <td>84823</td> <td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/22 15:59:29</td>   <td>89195</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/22 15:59:22</td>   <td>82516</td> <td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:59:26</td>   <td>86432</td> <td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/22 15:58:58</td>   <td>58766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.contextClick()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">contextClick</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:58:14</td>   <td>14468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.disableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">disableInputField</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:58:29</td>   <td>30036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.enableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">enableInputField</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/22 15:57:32</td>   <td>-27527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.exclusion()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">exclusion</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/22 15:57:52</td>   <td>-7089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.inclusion()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">inclusion</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/22 15:58:52</td>   <td>52412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>74332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>74332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/22 15:57:48</td>   <td>-11931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/22 15:58:52</td>   <td>52412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>74332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/22 15:57:48</td>   <td>-11931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/22 15:59:04</td>   <td>64272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginFullCreds()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginFullCreds</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/22 15:59:12</td>   <td>72832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongPassword()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongPassword</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/22 15:59:20</td>   <td>80281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongUserName()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongUserName</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/22 15:58:41</td>   <td>41444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.removeCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">removeCheckBox</td> 
+  <td>main@1381128261</td>   <td></td> </tr>
 </table>
