--- a/test-output/old/Automation Demo/methods-alphabetical.html
+++ b/test-output/old/Automation Demo/methods-alphabetical.html
@@ -1,56 +1,70 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Demo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="999395">  <td>21/03/22 15:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.addCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">addCheckBox</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:51</td>   <td>51390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.alert()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">alert</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:59:24</td>   <td>84823</td> <td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:29</td>   <td>89195</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:59:22</td>   <td>82516</td> <td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:59:26</td>   <td>86432</td> <td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:58</td>   <td>58766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.contextClick()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">contextClick</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:14</td>   <td>14468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.disableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">disableInputField</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:29</td>   <td>30036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.enableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">enableInputField</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:32</td>   <td>-27527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.exclusion()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">exclusion</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:52</td>   <td>-7089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.inclusion()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">inclusion</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:52</td>   <td>52412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>74332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>74332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:48</td>   <td>-11931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:52</td>   <td>52412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>74332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:48</td>   <td>-11931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:04</td>   <td>64272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginFullCreds()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginFullCreds</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:12</td>   <td>72832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongPassword()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongPassword</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:20</td>   <td>80281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongUserName()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongUserName</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:41</td>   <td>41444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.removeCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">removeCheckBox</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:38:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.addCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">addCheckBox</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:41</td>   <td>58278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.alert()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">alert</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:36</td>   <td>-6704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:20</td>   <td>97675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:36</td>   <td>-6704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:50</td>   <td>67578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>45684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>45684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:50</td>   <td>67578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:20</td>   <td>97675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>45684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:20</td>   <td>97675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>45684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:50</td>   <td>66997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.contextClick()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">contextClick</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:38:57</td>   <td>14815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.disableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">disableInputField</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:13</td>   <td>29885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.enableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">enableInputField</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:13</td>   <td>-29507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.exclusion()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">exclusion</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:35</td>   <td>-7191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.inclusion()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">inclusion</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>35754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:45</td>   <td>62341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>35754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:31</td>   <td>-11938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:31</td>   <td>-11938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:12</td>   <td>88908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:12</td>   <td>88908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>35754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:12</td>   <td>88908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:45</td>   <td>62341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>35754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:39:57</td>   <td>74118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginFullCreds()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginFullCreds</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:08</td>   <td>85144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongPassword()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongPassword</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:19</td>   <td>96070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongUserName()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongUserName</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:25</td>   <td>41823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.removeCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">removeCheckBox</td> 
+  <td>main@282432134</td>   <td></td> </tr>
 </table>
