--- a/test-output/old/Automation Demo/methods.html
+++ b/test-output/old/Automation Demo/methods.html
@@ -1,56 +1,70 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Demo</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:59:24</td>   <td>50444</td> <td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:52</td>   <td>18033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>39953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:04</td>   <td>29893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginFullCreds()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginFullCreds</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:14</td>   <td>-19911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.disableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">disableInputField</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:29</td>   <td>54816</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:52</td>   <td>-41468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.inclusion()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">inclusion</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:41</td>   <td>7065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.removeCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">removeCheckBox</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:58:29</td>   <td>-4343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.enableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">enableInputField</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:12</td>   <td>38453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongPassword()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongPassword</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:57:59</td>   <td>-34379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.addCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">addCheckBox</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:20</td>   <td>45902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongUserName()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongUserName</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>39953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:51</td>   <td>17011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.alert()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">alert</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:48</td>   <td>-46310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:52</td>   <td>18033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:32</td>   <td>-61906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.exclusion()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">exclusion</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:59:22</td>   <td>48137</td> <td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>21/03/22 15:59:26</td>   <td>52053</td> <td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="928d86">  <td>21/03/22 15:58:58</td>   <td>24387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.contextClick()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">contextClick</td> 
-  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>21/03/22 15:59:14</td>   <td>39953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>21/03/22 15:57:48</td>   <td>-46310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@6b9651f3]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@1381128261</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:20</td>   <td>104379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:50</td>   <td>74282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>42458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:45</td>   <td>69045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>42458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:35</td>   <td>-487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.inclusion()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">inclusion</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:31</td>   <td>-5234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>52388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>52388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:31</td>   <td>-5234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:41</td>   <td>64982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.alert()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">alert</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:12</td>   <td>95612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:12</td>   <td>95612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:25</td>   <td>48527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.removeCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">removeCheckBox</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:50</td>   <td>73701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.contextClick()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">contextClick</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:50</td>   <td>74282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:20</td>   <td>104379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:39:57</td>   <td>80822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginFullCreds()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginFullCreds</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:19</td>   <td>102774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongUserName()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongUserName</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>21/03/23 10:38:13</td>   <td>-22803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.exclusion()[pri:0, instance:elementSuite.AddRemoveTest@76b0bfab]">exclusion</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:13</td>   <td>36589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.enableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">enableInputField</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>42458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:08</td>   <td>91848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWrongPassword()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">loginWrongPassword</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>52388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:12</td>   <td>95612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialize()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="928d86">  <td>21/03/23 10:39:45</td>   <td>69045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@e874448]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:18</td>   <td>42458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DynamicContentTest.initialize()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:38:43</td>   <td>6704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.addCheckBox()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">addCheckBox</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:38:57</td>   <td>21519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicContentTest.disableInputField()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">disableInputField</td> 
+  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="8b67fd">  <td>21/03/23 10:40:20</td>   <td>104379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.browserClose()[pri:0, instance:elementSuite.LoginTest@29b5cd00]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>21/03/23 10:39:28</td>   <td>52388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DynamicContentTest.browserClose()[pri:0, instance:elementSuite.DynamicContentTest@7ce6a65d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@282432134</td>   <td></td> </tr>
 </table>
